--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Crypto-Converter-App",
+  "name": "Crypto-Currency-App",
   "short_name": "Crypto",
   "theme_color": "#000",
   "background_color": "#000",
